Cambios en la cadena de conexión y actualización de la base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Blog_UDLA_PZ_JS_DM-0471109e-34e4-45db-80d2-3417d58f56d1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConexionSQL": "Server=(localdb)\\mssqllocaldb;Database=Blog_UDLA;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
