Funcionalidad editar articulos aniadida

--- a/Blog_UDLA_PZ_JS_DM.csproj
+++ b/Blog_UDLA_PZ_JS_DM.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\BlogUDLA.AccesoDatos\BlogUDLA.AccesoDatos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagenes\articulos\" />
+  </ItemGroup>
+
 </Project>
