--- a/Blog_UDLA_PZ_JS_DM.csproj
+++ b/Blog_UDLA_PZ_JS_DM.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\imagenes\articulos\" />
+    <Folder Include="wwwroot\imagenes\sliders\" />
   </ItemGroup>
 
 </Project>
